# vksdk-request-based-yolo-example

./: CMakeLists.txt  CustomImageYolo.cpp  CustomYolo.cpp  README.md
